--- a/table.css
+++ b/table.css
@@ -4,12 +4,13 @@
 
 html {
   font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
+  color: #111111;
 }
 
 /* header */
@@ -18,9 +19,9 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
-  padding: 1rem 2vw;
+  padding: 1rem;
   margin: 0 auto;
   background: #eaf3f6;
   border-bottom: 1px solid #cad3d6;
@@ -28,8 +29,7 @@ header {
 
 .logo {
   filter: drop-shadow(0px 2px 1px #aab3b6);
-  width: 200px;
-  margin: auto 1rem;
+  width: 150px;
 }
 
 nav {
@@ -56,6 +56,9 @@ nav li {
 /* main */
 
 main {
+  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
+    0 2px 4px rgba(0, 0, 0, 0.24);
+
   margin: 0 auto;
   padding: 1rem 2vw;
   width: 100%;
@@ -136,7 +139,7 @@ tbody:nth-child(even) th {
 
 td {
   text-align: right;
-  font-family: monospace;
+  font-family: Consolas, monospace;
 }
 
 tbody th {
