--- a/proto-home/style.css
+++ b/proto-home/style.css
@@ -38,14 +38,15 @@ h3 {
 header {
   /* background: #012; */
   /* background: #addfee; */
-  background: #eaf3f6;
+  /* Alternate: no background */
+  /* background: #eaf3f6; */
   padding: 0;
   /* color: white; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  border-bottom: 1px solid #cad3d6;
+  /* border-bottom: 1px solid #cad3d6; */
   text-align: center;
 }
 
@@ -67,17 +68,22 @@ header > h1 {
   }
 } */
 
+.logo-link {
+  height: 6rem;
+  margin: 1rem;
+}
+
 .logo {
-  margin: 2rem;
-  max-height: 6rem;
-  max-width: 900px;
-  filter: drop-shadow(0px 4px 2px #aab3b6);
+  height: 6rem;
+  /* filter: drop-shadow(0px 4px 2px #aab3b6); */
 }
 
 .feature {
   background-color: #010101;
-  color: #eaf3f6;
   color: #5dcaff;
+  /* Alternate: */
+  /* margin: 0 2rem; */
+  /* border-radius: 16px; */
 }
 
 main {
@@ -94,6 +100,8 @@ main {
 article {
   margin: 0 auto;
   padding: 2rem 4vw;
+  /* Alternate: */
+  /* padding: 0 4vw; */
 }
 
 .article-type {
@@ -112,13 +120,23 @@ article {
 
 a {
   text-decoration: none;
+  color: #5dcaff;
 }
 
-a.feature h2:hover {
+a:hover {
   text-decoration: underline;
 }
 
 .feature img {
   margin: 1rem 0;
   overflow: hidden;
+}
+
+header a {
+  color: #0099cd;
+}
+
+header a:hover {
+  text-decoration: none;
+  color: #5dcaff;
 }
