Light nav hover

--- a/proto-home/style.css
+++ b/proto-home/style.css
@@ -245,7 +245,7 @@ nav {
   display: block;
 }
 
-.nav-links li:hover {
-  background: #012;
-  /* alternate: no change */
-}
+/* .nav-links li:hover { */
+/* background: #012; */
+/* alternate: no change */
+/* } */
