--- a/proto-home/style.css
+++ b/proto-home/style.css
@@ -196,6 +196,8 @@ footer p {
   text-align: center;
   border-radius: 8px;
   margin: 2rem auto;
+  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
+    0 2px 4px rgba(0, 0, 0, 0.24);
 }
 
 .donate a {
@@ -239,7 +241,7 @@ nav {
 }
 
 .nav-links a {
-  padding: 0.5rem 1rem;
+  padding: 0.6rem 1rem;
   display: block;
 }
 
