--- a/table.css
+++ b/table.css
@@ -24,8 +24,8 @@ header {
   flex-wrap: wrap;
   padding: 1rem;
   margin: 0 auto;
-  background: #eaf3f6;
-  border-bottom: 1px solid #cad3d6;
+  background: #f9f9f9;
+  /* border-bottom: 1px solid #e9e9e9; */
 }
 
 .logo {
@@ -57,6 +57,7 @@ nav li {
 /* main */
 
 main {
+  box-shadow: 0 -15px 10px -20px rgba(0, 0, 0, 0.3);
   /*  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);*/
 
