--- a/style.css
+++ b/style.css
@@ -78,18 +78,21 @@ nav > h1 {
   font-size: 1.2rem;
 }
 
-@media only screen and (max-width: 600px) {
-  header > h1 {
-    display: none;
-  }
-}
-
 .logo {
   margin: 2rem 0;
   width: 80vw;
   max-width: 750px;
   min-width: 300px;
   filter: drop-shadow(0px 4px 2px #aab3b6);
+}
+
+@media only screen and (max-width: 600px) {
+  header > h1 {
+    display: none;
+  }
+  .logo {
+    filter: none;
+  }
 }
 
 /* Main */
