--- a/table.css
+++ b/table.css
@@ -29,7 +29,6 @@ header {
 }
 
 .logo {
-  filter: drop-shadow(0px 2px 1px #aab3b6);
   width: 150px;
 }
 
@@ -69,7 +68,7 @@ main {
 h1 {
   line-height: 1.2;
   text-align: center;
-  margin: 0;
+  margin: 1rem 0;
   padding: 0;
 }
 
