--- a/templates/page.html
+++ b/templates/page.html
@@ -19,29 +19,39 @@
       <li>
         <a href="resources.html">Resources</a>
       </li>
+      <!-- <li>
+        <a href="/">Our Work</a>
+      </li> -->
+      <li>
+        <a href="who.html">Who We Are</a>
+      </li>
       <li>
         <a href="donate.html">Donate</a>
       </li>
+
     </ul>
   </nav>
   <header>
     <a href="/">
-      <img class="logo" src="logo.svg" alt="Metric Geometry and Gerrymandering Group">
+      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
-    <h1>
-      <a href="/">Metric Geometry and Gerrymandering Group</a>
-    </h1>
+    <h1><a href="/">
+        Metric Geometry and Gerrymandering Group</a></h1>
   </header>
-  <main>
-    <article>
-      {{page}}
-    </article>
-  </main>
+
+  {{page}}
 
   <footer>
-    <p class="copyright">
-      &#169; 2018 Metric Geometry and Gerrymandering Group
-    </p>
+    <ul class="footer-items">
+      <li class="copyright">
+        &#169; 2018 Metric Geometry and Gerrymandering Group
+      </li>
+      <li>
+        <address>
+          <a href="mailto:gerrymandr@gmail.com">gerrymandr@gmail.com</a>
+        </address>
+      </li>
+    </ul>
   </footer>
 </body>
 
