--- a/style.css
+++ b/style.css
@@ -117,12 +117,6 @@ main {
   grid-template-columns: minmax(300px, 5fr) minmax(300px, 2fr);
 }
 
-@media only screen and (max-width: 900px) {
-  .two-column {
-    grid-template-columns: 1fr;
-  }
-}
-
 article {
   max-width: 900px;
   margin: 0 auto 2rem;
@@ -253,6 +247,15 @@ address {
   color: #777;
   grid-column: 1 / 3;
   margin: 2rem 2vw;
+}
+@media only screen and (max-width: 900px) {
+  .two-column {
+    grid-template-columns: 1fr;
+  }
+
+  .support {
+    grid-column: 1 / 2;
+  }
 }
 
 .copyright {
