--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   padding: 0;
   color: #111111;
-  font-size: 18px;
+  font-size: 1.2rem;
   line-height: 2;
   overflow-x: hidden;
 }
