--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ main {
 article {
   max-width: 900px;
   margin: 0 auto 2rem;
-  padding: 0 2vw;
+  padding: 0 1rem;
 }
 
 .article-type {
@@ -200,7 +200,7 @@ p {
 /* footer */
 
 footer {
-  padding: 1rem 2vw 2rem;
+  padding: 1rem 1rem 2rem;
 
   font-size: 1rem;
 
@@ -246,7 +246,7 @@ address {
   font-style: italic;
   color: #777;
   grid-column: 1 / 3;
-  margin: 2rem 2vw;
+  margin: 2rem 1rem;
 }
 @media only screen and (max-width: 900px) {
   .two-column {
