--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   <title>{% if page.title %}{{page.title}} - {% endif %}Metric Geometry and Gerrymandering Group</title>
   <link rel="stylesheet" type="text/css" media="screen" href="static/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Source+Sans+Pro:300,400"
+    rel="stylesheet">
 </head>
 
 <body>
