--- a/static/style.css
+++ b/static/style.css
@@ -23,8 +23,7 @@ h1 {
   font-size: 3rem;
 }
 
-h1,
-h2 {
+h1 {
   font-family: "Playfair Display", Cambria, Cochin, Georgia, Times,
     "Times New Roman", serif;
   font-weight: 900;
@@ -126,7 +125,7 @@ main {
   box-shadow: 0 -15px 10px -20px rgba(0, 0, 0, 0.3);
   max-width: 1000px;
   margin: 0 auto;
-  padding: 2rem 1rem 0;
+  padding: 2rem 0 0;
   min-height: 60vh;
 }
 
@@ -144,7 +143,7 @@ main {
 article {
   max-width: 48rem;
   margin: 0 auto 2rem;
-  padding: 0;
+  padding: 0 1rem;
 }
 
 .article-type {
