--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,8 @@ h1 {
   font-size: 3rem;
 }
 
-h1 {
+h1,
+h2 {
   font-family: "Playfair Display", Cambria, Cochin, Georgia, Times,
     "Times New Roman", serif;
   font-weight: 900;
@@ -36,7 +37,6 @@ h3 {
   line-height: 1.2;
   margin: 0 0 1rem;
   padding: 0;
-  /* font-family: "Source Sans Pro", sans-serif; */
 }
 
 h3 {
