--- a/_layouts/two-column.html
+++ b/_layouts/two-column.html
@@ -18,8 +18,10 @@
     </ul>
   </nav>
 
-  <main class="two-column">
-    {{content}}
+  <main>
+    <div class="two-column">
+      {{content}}
+    </div>
   </main>
 
   {% include footer.html %}
