--- a/static/style.css
+++ b/static/style.css
@@ -123,13 +123,14 @@ header > h1 {
 
 main {
   box-shadow: 0 -15px 10px -20px rgba(0, 0, 0, 0.3);
-  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem 0 0;
   min-height: 60vh;
 }
 
 .two-column {
+  max-width: 1000px;
+  margin: 0 auto;
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: minmax(300px, 5fr) minmax(300px, 2fr);
