Switch to serif fonts

--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,8 @@
 
 html {
   font-size: 100%;
-  /* font-family: "Quattrocento", serif; */
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Quattrocento", serif;
+  /* font-family: "Source Sans Pro", sans-serif; */
 }
 
 body {
