--- a/static/style.css
+++ b/static/style.css
@@ -4,15 +4,13 @@
 
 html {
   font-size: 100%;
-  /* font-family: "Quattrocento", serif; */
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Quattrocento", serif;
 }
 
 body {
   margin: 0;
   padding: 0;
   color: #111111;
-  font-size: 1.2rem;
   line-height: 2;
   overflow-x: hidden;
 }
