--- a/static/style.css
+++ b/static/style.css
@@ -91,7 +91,7 @@ header > h1 {
 
 .nav-logo {
   width: 200px;
-  min-width: 200px;
+  height: 43px;
   margin: 0.6rem 0;
   filter: none;
   display: block;
@@ -103,6 +103,9 @@ header > h1 {
   width: 80vw;
   max-width: 1000px;
   min-width: 300px;
+  max-height: 214.6px;
+  min-height: 64.4px;
+  height: 17.2vw;
   filter: drop-shadow(0px 4px 2px #aab3b6);
 }
 
