Restructure static directory

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   <title>{% if page.title %}{{page.title}} - {% endif %}Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="static/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="static/css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Quattrocento:400,700|Source+Sans+Pro:300,400"
     rel="stylesheet">
 </head>
