--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,15 +12,11 @@
       {% endfor %}
     </ul>
   </nav>
-  <header>
+  <section class="map">
     <a href="/">
       <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
     </a>
-    <h1>
-      <a href="/">Metric Geometry and Gerrymandering Group</a>
-    </h1>
-  </header>
-
+  </section>
   {{content}}
 
   {% include footer.html %}
