--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,7 +33,7 @@ h1,
 h2,
 h3 {
   line-height: 1.2;
-  margin: 0 0 1rem;
+  margin: 2rem 0 1rem;
   padding: 0;
 }
 
@@ -50,7 +50,6 @@ h3 {
 header {
   padding: 2rem 0 0;
   /* Alternate */
-  box-shadow: 0 -15px 10px -20px rgba(0, 0, 0, 0.3);
   margin: 0;
 
   display: flex;
@@ -69,24 +68,15 @@ nav {
   text-transform: uppercase;
 }
 
-header > h1,
-nav > h1 {
+.banner__title {
   font-weight: 300;
   text-transform: uppercase;
   line-height: 2;
   letter-spacing: 0.5rem;
   text-align: center;
   font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
-}
-
-nav > h1 {
   margin: 0.4rem 0;
   font-size: 1.2rem;
-}
-
-header > h1 {
-  margin: 1rem 0 3rem;
-  font-size: 2.2rem;
 }
 
 .nav-logo {
@@ -124,9 +114,8 @@ header > h1 {
 /* Main */
 
 main {
-  box-shadow: 0 -15px 10px -20px rgba(0, 0, 0, 0.3);
   margin: 0 auto;
-  padding: 2rem 0 0;
+  padding: 0;
   min-height: 60vh;
 }
 
@@ -134,29 +123,18 @@ main {
   max-width: 1000px;
   margin: 0 auto;
   display: grid;
-  grid-gap: 2rem;
+  grid-column-gap: 2rem;
   grid-template-columns: minmax(300px, 5fr) minmax(300px, 2fr);
 }
 
 .home {
   padding: 0 1rem;
-  box-shadow: none;
 }
 
 article {
   max-width: 48rem;
   margin: 0 auto 2rem;
   padding: 0 1rem;
-}
-
-.article-type {
-  margin: 0;
-  text-transform: uppercase;
-  font-weight: 400;
-  font-family: "Franklin Gothic", Arial, Helvetica, sans-serif;
-  padding: 0;
-  line-height: 1;
-  font-size: 1rem;
 }
 
 figure {
@@ -172,11 +150,15 @@ figure {
   color: #5dcaff;
   padding: 2rem;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 2rem auto;
   /* margin: 0; */
   /* Alternate: */
   /* margin: 0 2rem; */
   /* border-radius: 16px; */
+}
+
+.feature__title {
+  margin: 0 0 1rem;
 }
 
 .feature img {
@@ -277,7 +259,7 @@ address {
   /* font-style: italic; */
   color: #777;
   grid-column: 1 / 3;
-  margin: 2rem 0rem;
+  margin: 1rem 0 2rem;
 }
 @media only screen and (max-width: 900px) {
   .two-column {
@@ -319,8 +301,7 @@ address {
 /* nav */
 
 nav {
-  /* background: #010101; */
-  /* Alternate: */
+  box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
   background: #f9f9f9;
   margin: 0 auto;
   overflow-x: auto;
@@ -398,4 +379,63 @@ dd {
   }
 }
 
-/* Banner layout */
+/* map layout */
+
+.map {
+  background: url(/static/images/US-map.jpg) no-repeat;
+  background-size: cover;
+  height: 100vh;
+
+  display: flex;
+  align-items: stretch;
+  justify-content: stretch;
+  flex-direction: column;
+}
+
+.map__nav {
+  margin: 0;
+}
+
+.map__title {
+  font-weight: 300;
+  text-transform: uppercase;
+  line-height: 2;
+  letter-spacing: 0.5rem;
+  text-align: center;
+  font-family: "Source Sans Pro", "Arial Narrow", Arial, sans-serif;
+  text-shadow: 1px 1px #aab3b6;
+
+  margin: 0;
+  font-size: 2.2rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .map__title {
+    font-size: 1.4rem;
+  }
+  .map__nav .nav-links {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.map__logo {
+  width: 60vw;
+  height: 12.9vw;
+  max-width: 1000px;
+  min-width: 300px;
+  max-height: 214.6px;
+  min-height: 64.4px;
+  filter: drop-shadow(0px 4px 2px #aab3b6);
+}
+
+.map__inset {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-grow: 1;
+  box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+}
