--- a/static/css/style.css
+++ b/static/css/style.css
@@ -409,16 +409,6 @@ dd {
   font-size: 2.2rem;
 }
 
-@media only screen and (max-width: 600px) {
-  .map__title {
-    font-size: 1.4rem;
-  }
-  .map__nav .nav-links {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .map__logo {
   width: 60vw;
   height: 12.9vw;
@@ -438,4 +428,20 @@ dd {
   flex-direction: column;
   flex-grow: 1;
   box-shadow: 0px -10px 15px -20px rgba(0, 0, 0, 0.3) inset;
+}
+
+@media only screen and (max-width: 600px) {
+  .map__title {
+    font-size: 1.4rem;
+  }
+  .map__nav .nav-links {
+    display: flex;
+    flex-direction: column;
+  }
+  .map__inset {
+    height: 100vh;
+  }
+  .map {
+    height: none;
+  }
 }
